# Hapi-Player

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs  prompt.md
.github/workflows/: ci.yml  release.yml
packaging/linux/: hapi-player.desktop
packaging/macos/: Info.plist
xtask/: Cargo.toml
xtask/src/: dist.rs  main.rs
